# myapps

./: .SRCINFO  .gitignore  CLAUDE.md  CONTRIBUTING.md  PKGBUILD  README.en.md  README.md  ROADMAP.md  WHATS_NEW.md  app_lister.py  build-appimage.sh  build-deb-proper.sh  build-deb.sh  de.pc-wittfoot.myapps.desktop  de.pc-wittfoot.myapps.metainfo.xml  de.pc-wittfoot.myapps.yml  io.github.nicolettas-muggelbude.myapps.metainfo.xml  io.github.nicolettas-muggelbude.myapps.yml  myapps  myapps.dsc  myapps.spec  pyproject.toml  requirements.txt  starter_app_lister.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  filter_suggestion.yml
debian/: changelog  control  copyright  install  myapps  myapps.desktop
debian/DEBIAN/: control
debian/usr/share/myapps/filters/: debian.json  fedora.json  opensuse.json  solus.json
debian/usr/share/myapps/src/myapps/: __init__.py  distro_detect.py  export.py  filters.py  gui.py  gui_gtk.py  icons.py
docs/: _config.yml  datenschutz.md  impressum.md
docs/screenshots/: README.md
filters/: arch.json  common.json
src/myapps/: __init__.py  gui.py  gui_gtk.py  i18n.py  icons.py  main.py  package_manager.py
